File: components/nexus-security/src/test/java/org/sonatype/nexus/security/realm/RealmVirtualThreadTest.java